tests/baselines/reference/classExpressionPropertyModifiers.errors.txt
tests/cases/compiler/classExpressionPropertyModifiers.ts(2,36): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/compiler/classExpressionPropertyModifiers.ts(3,5): error TS1031: 'export' modifier cannot appear on class elements of this kind.


==== tests/cases/compiler/classExpressionPropertyModifiers.ts (2 errors) ====
    const a = class Cat {
        declare [Symbol.toStringTag] = "uh";
                                       ~~~~
!!! error TS1039: Initializers are not allowed in ambient contexts.
        export foo = 1;
        ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on class elements of this kind.
    }
    